# InnerSpeaker

./: Cargo.toml  README.md
src/: audio.rs  components.rs  config.rs  consts.rs  main.rs  style.css
