[package]
name = "innerspeaker"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A comfy metronome app."
repository = "https://github.com/Lamby777/InnerSpeaker/"
keywords = ["metronome", "music", "audio", "gtk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
